# producer-toolkit

./: .gitignore  MANIFEST.in  MIGRATION.md  README.md  install.bat  install.py  main.py  pyproject.toml  requirements.txt  run_producer_toolkit.bat  setup.py
.github/workflows/: test_installation.yml
docs/: INSTALLATION.md  USAGE.md
producer_toolkit/: __init__.py  cli.py
producer_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
producer_toolkit/downloader/: __init__.py  download.py
producer_toolkit/processor/: __init__.py
scripts/windows/: install.bat  run_toolkit.bat
tests/: .gitignore  README.md  run_tests.py
tests/ci/: README.md  __init__.py
tests/ci/scripts/: __init__.py  run_ci_test.py
tests/local/: __init__.py  test_local.py  test_offline.py
tools/downloader/: download.py
tools/processor/: spleeter_processor.py
tools/spleeter/: splitter.py
tools/yt_dlp/: download.py
