[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "producer-toolkit"
version = "1.0.0"
description = "A command-line toolkit for music producers to download audio/video from YouTube and extract stems using Spleeter"
authors = [
    {name = "Daniel", email = "your-email@example.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
keywords = ["audio", "music", "youtube", "spleeter", "stems", "separation", "download"]

dependencies = [
    "yt-dlp>=2023.3.4",
    "spleeter==2.3.2", 
    "ffmpeg-python==0.2.0",
    "librosa==0.8.1",
    "soundfile==0.12.1",
    "pydub==0.25.1",
    "norbert==0.2.1",
    "numpy==1.22.4",
    "scikit-learn==1.3.0",
    "tensorflow==2.13.0",
]

[project.scripts]
pt = "producer_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/producer-toolkit"
Repository = "https://github.com/yourusername/producer-toolkit"
Issues = "https://github.com/yourusername/producer-toolkit/issues"
